--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,14 @@ section{
     position: relative;
 }
 .row .col50 .imag img{
-    width: 550px;
+    width: 100%;
+}
+
+@media screen and (max-width: 450px) {
+    .row .col50 .imag {
+        width: 300px;
+    }
+
 }
 
 /****************** SECTION MENU ********************/
@@ -421,6 +428,20 @@ section{
 }
 textarea {
     height: 150px;
+}
+
+@media screen and (max-width: 450px) {
+    .contact {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+    }
+    .contactform {
+        width: 200px;
+        margin: 0;
+    }
+
 }
 
 .Copyright{
